--- a/style.css
+++ b/style.css
@@ -62,3 +62,15 @@
     height: 100px;
     margin-top: -50px;
 }
+
+@media only screen and (max-width: 768px) {
+    body {
+    
+    }
+  }
+
+  @media only screen and (max-width: 640px) {
+    body {
+    
+    }
+  }
